# firekeeper

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  firekeeper.full.toml  firekeeper.toml  package.json  prek.toml
docs/: acp-architecture.md
src/: cli.rs  config.rs  fs_tool.rs  llm.rs  main.rs  mcp.rs  orchestrator.rs  suggest.rs  tool.rs  types.rs  util.rs  worker.rs
src/agent/: loop.rs  mod.rs  openai.rs  types.rs
src/agent/llm/: mod.rs  openai.rs
src/agent/tool/: fs.rs  mod.rs  report.rs  web.rs
src/review/: context_server.rs  mod.rs  orchestrator.rs  render.rs  worker.rs
src/review/worker/: acp.rs  builtin.rs
src/rule/: body.rs
src/tool/: diff.rs  fetch.rs  fs.rs  glob.rs  grep.rs  ls.rs  lua.rs  mod.rs  read.rs  report.rs  sh.rs  suggest.rs  think.rs  utils.rs
src/util/: diff.rs  git.rs  mod.rs
