[package]
name = "firekeeper"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/firekeeper-ai/firekeeper"
license = "MIT"

[dependencies]
agent-client-protocol = "0.9"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
globset = "0.4"
gray_matter = "0.3"
html2md = "0.2"
reqwest = { version = "0.13", features = ["json"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sheath = "0.1"
tiny-loop = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.9"
toml-scaffold = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
